--- a/index.html
+++ b/index.html
@@ -77,28 +77,28 @@
                                 <h4 class="card-title">First Attack</h4>
                                 <label class="opt">
                                     <input type="radio" name="attack1" id="attack1_ss" value="ss" />
-                                    <div class="box">
+                                    <div class="box sfback">
                                         <span>Squall Fish<br />↓<br />Squall</span>
                                     </div>
                                 </label>
 
                                 <label class="opt">
                                     <input type="radio" name="attack1" id="attack1_sq" value="sq" />
-                                    <div class="box">
+                                    <div class="box qfback">
                                         <span>Squall Fish<br />↓<br />Quistis</span>
                                     </div>
                                 </label>
 
                                 <label class="opt">
                                     <input type="radio" name="attack1" id="attack1_qs" value="qs" />
-                                    <div class="box">
+                                    <div class="box sback">
                                         <span>Quistis Fish<br />↓<br />Squall</span>
                                     </div>
                                 </label>
 
                                 <label class="opt">
                                     <input type="radio" name="attack1" id="attack1_qq" value="qq" />
-                                    <div class="box">
+                                    <div class="box qback">
                                         <span>Quistis Fish<br />↓<br />Quistis</span>
                                     </div>
                                 </label>
